--- a/NEWS
+++ b/NEWS
@@ -19,8 +19,8 @@ for SRTP.
 
 ** danetool: Corrected bug that prevented loading PEM files.
 
-** danetool: Added --check option to allow querying sites for
-DANE data.
+** danetool: Added --check option to allow querying and verifying
+a site's DANE data.
 
 ** libgnutls-dane: Added pkg-config file for the library.
 
@@ -38,6 +38,7 @@ gnutls_srtp_profile_t: Added
 dane_cert_type_name: Added
 dane_match_type_name: Added
 dane_cert_usage_name: Added
+dane_verification_status_print: Added
 GNUTLS_CERT_REVOCATION_DATA_TOO_OLD: Added
 GNUTLS_CERT_REVOCATION_DATA_INVALID: Added
 GNUTLS_CERT_UNEXPECTED_OWNER: Added
