--- a/tests/suite/x509paths/README
+++ b/tests/suite/x509paths/README
@@ -20,12 +20,11 @@ Chain 19: This requires advanced verification that we don't support
 yet. It requires to check that this path contains no revocation data.
 We shouldn't make these tests.
 
-Chain 28-29: We fail to check keyCertSign (non-)critical key usage in
-intermediate certificates.  XXX
-
 Chain 31-32: The CRL is issued by a issuer without CRLSign
 (non-)critical keyCertSign.  We don't check the CRL, so this is not a
 real problem. This is easier to be supported now with the trust_list
-that can verify CRLs on addition.
+that can verify CRLs on addition. (there is an issue there since the
+CRLs that are being added are typically of an intermediate CA which
+is not in the trust list to verify them)
 
 Chain 54-55,58-61: We don't check path length constraints properly. XXX
