--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,15 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+Version 2.12.21 (unreleased)
+
+** libgnutls: Backported patch to compile with libtasn1 3.0.
+Minimum libtasn1 dependency is now 2.14.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 Version 2.12.20 (released 2012-06-10)
 
 ** libgnutls: Fixed memory leak in PKCS #8 key import.
