--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ See the end for copying conditions.
 
 ** libgnutls: gnutls_x509_crl_verify() includes the time checks.
 
+** libgnutls: Increased maximum password length in the PKCS #12
+functions.
+
 ** API and ABI modifications:
 GNUTLS_CERT_REVOCATION_DATA_TOO_OLD: Added
 GNUTLS_CERT_REVOCATION_DATA_ISSUED_IN_FUTURE: Added
