--- a/NEWS
+++ b/NEWS
@@ -54,6 +54,8 @@ dane_cert_usage_name: Added
 dane_verification_status_print: Added
 GNUTLS_CERT_REVOCATION_DATA_TOO_OLD: Added
 GNUTLS_CERT_REVOCATION_DATA_INVALID: Added
+GNUTLS_CERT_REVOCATION_DATA_ISSUED_IN_FUTURE: Added
+GNUTLS_CERT_SIGNER_CONSTRAINTS_FAILURE: Added
 GNUTLS_CERT_UNEXPECTED_OWNER: Added
 GNUTLS_VERIFY_DO_NOT_ALLOW_UNSORTED_CHAIN: Added
 
