--- a/doc/cha-tokens.texi
+++ b/doc/cha-tokens.texi
@@ -69,9 +69,9 @@ sequence.
 
 @showfuncC{gnutls_pubkey_import_x509,gnutls_pubkey_import_openpgp,gnutls_pubkey_import_pkcs11}
 
-@showfuncC{gnutls_pubkey_import_url,gnutls_pubkey_import_privkey,gnutls_pubkey_import}
+@showfuncD{gnutls_pubkey_import_url,gnutls_pubkey_import_privkey,gnutls_pubkey_import,gnutls_pubkey_export}
 
-@showfuncB{gnutls_pubkey_export,gnutls_pubkey_export2}
+@showfuncdesc{gnutls_pubkey_export2}
 
 Other helper functions that allow directly importing from raw X.509 or
 OpenPGP structures are shown below. 
@@ -90,7 +90,9 @@ key fingerprint would provide a memorable sketch.
 
 @showfuncD{gnutls_pubkey_get_pk_algorithm,gnutls_pubkey_get_preferred_hash_algorithm,gnutls_pubkey_get_key_id,gnutls_random_art}
 
+To export the key-specific parameters, or obtain a unique key ID the following functions are provided.
 
+@showfuncD{gnutls_pubkey_get_pk_rsa_raw,gnutls_pubkey_get_pk_dsa_raw,gnutls_pubkey_get_pk_ecc_raw,gnutls_pubkey_get_pk_ecc_x962}
 
 @node Abstract private keys
 @subsection Private keys
