--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.26 (unreleased)
 
+** libgnutls: Always tolerate key usage violation errors from the side
+of the peer, but also notify via an audit message.
+
 ** libgnutls: gnutls_x509_crl_verify() includes the time checks.
 
 ** libgnutls: Increased maximum password length in the PKCS #12
