--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,7 @@ a site's DANE data.
 
 ** API and ABI modifications:
 gnutls_session_get_id2: Added
++gnutls_sign_is_secure: Added
 gnutls_certificate_verify_peers3: Added
 gnutls_ocsp_status_request_is_checked: Added
 gnutls_certificate_verification_status_print: Added
@@ -61,6 +62,7 @@ GNUTLS_CERT_REVOCATION_DATA_ISSUED_IN_FUTURE: Added
 GNUTLS_CERT_SIGNER_CONSTRAINTS_FAILURE: Added
 GNUTLS_CERT_UNEXPECTED_OWNER: Added
 GNUTLS_VERIFY_DO_NOT_ALLOW_UNSORTED_CHAIN: Added
+
 
 * Version 3.1.3 (released 2012-10-12)
 
