--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -19,6 +19,11 @@
 @node Introduction to the library
 @section Introduction
 
+This chapter tries to explain the basic functionality of the current GnuTLS
+library. Note that there may be additional functionality not discussed here
+but included in the library. Checking the header files in @file{/usr/include/gnutls/}
+and the manpages is recommended.
+
 @menu
 * General idea::
 * Error handling::
@@ -31,16 +36,17 @@
 @node General idea
 @subsection General idea
 
-A brief description of how @acronym{GnuTLS} works internally is shown
-at @ref{fig:gnutls-design}. This section may become more clear after
-having read the rest of this section.
+A brief description of how @acronym{GnuTLS} sessions operate is shown
+at @ref{fig:gnutls-design}. This section will become more clear when it
+is completely read.
 As shown in the figure, there is a read-only global state that is
 initialized once by the global initialization function.  This global
 structure, among others, contains the memory allocation functions
-used, and structures needed for the @acronym{ASN.1} parser.  This
+used, structures needed for the @acronym{ASN.1} parser and depending
+on the system's CPU, pointers to hardware accelerated encryption functions.  This
 structure is never modified by any @acronym{GnuTLS} function, except
 for the deinitialization function which frees all allocated memory
-and is called after the program has permanently
+and must be called after the program has permanently
 finished using @acronym{GnuTLS}.
 
 @float Figure,fig:gnutls-design
