--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -7,7 +7,16 @@
 	url = "http://tools.ietf.org/html/draft-ietf-websec-key-pinning-01"
 }
 
-@Misc{ RFC2246,
+@Misc{ RFC5764,
+	author = "David McGrew and Eric Rescorla",
+	title = "{Datagram Transport Layer Security (DTLS) Extension to Establish Keys for the Secure Real-time Transport Protocol (SRTP)}",
+	month = "May",
+	year = "2010",
+	note = "Available from \url{http://www.ietf.org/rfc/rfc5764}",
+	url = "http://www.ietf.org/rfc/rfc5764 "
+}
+
+@Misc{ RFC2246 ,
 	author = "Tim Dierks and Christopher Allen",
 	title = "{The TLS Protocol Version 1.0}",
 	month = "January",
