--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,9 @@ key.
 ** Added PKCS #11 key generation function that returns the public key
 on generation.
 
+** Corrected bug in priority string parsing, that mostly affected combined
+levels. Patch by Tim Kosse.
+
 ** API and ABI modifications:
 gnutls_pkcs11_privkey_generate2: Added
 
