--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,9 @@ Minimum libtasn1 dependency is now 2.14.
 ** libgnutls: Always tolerate key usage violation errors from the side
 of the peer, but also notify via an audit message.
 
+** libgnutls: Allow a NULL password to be specified in 
+gnutls_x509_privkey_import_pkcs8().
+
 ** minitasn1: Upgraded to libtasn1 version 3.0.
 
 ** API and ABI modifications:
