--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ See the end for copying conditions.
 ** libgnutls: Added functions to parse the certificates policies
 extension.
 
+** libgnutls: Handle BMPString (UCS-2) encoding in the DN.
+
 ** libgnutls: Added PKCS #11 key generation function that returns the 
 public key on generation.
 
