--- a/README
+++ b/README
@@ -32,8 +32,20 @@ The commands above build and install the static archive (libgnutls.a),
 the shared object (libgnutls.so), and additional binaries such as certtool 
 and gnutls-cli.
 
-The library depends on libnettle and p11-kit. Versions
-2.10.3 and prior used libgcrypt as the default cryptographic library.
+The library depends on libnettle. Optionally it may use the 
+following libraries:
+ * p11-kit: for smart card support
+     http://p11-glue.freedesktop.org/p11-kit.html
+ * libtspi: for Trusted Platform Module (TPM) support, 
+     http://trousers.sourceforge.net/
+ * libunbound: For DNSSEC/DANE support,
+     http://unbound.net/
+ * libz: For compression support.
+     http://www.zlib.net/
+ * libtasn1: For ASN.1 parsing (a copy is included, if not found)
+     http://www.gnu.org/software/libtasn1/
+
+Versions 2.10.3 and prior used libgcrypt as the default cryptographic library.
 Nettle can be found at http://www.gnu.org/software/nettle/, while
 p11-kit can be found at <http://p11-glue.freedesktop.org/p11-kit.html>.
 
