--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ See the end for copying conditions.
 ** libgnutls: gnutls_x509_crt_get_policy() allows for a list of zero
 policy qualifiers.
 
+** libgnutls-guile: Fixed parallel compilation issue.
+
 ** gnutls-cli: It will try to connect to all possible returned addresses
 before failing.
 
