--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.27 (unreleased)
 
+** libgnutls: Fixed record parsing issue. Reported by Kenny
+Patterson and Nadhem Alfardan.
+
 ** libgnutls-guile: Fixed parallel compilation issue.
 
 ** API and ABI modifications:
