--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.1.6 (unreleased)
 
+** libgnutls: Fixed record parsing issue. Reported by Kenny
+Patterson and Nadhem Alfardan.
+
 ** libgnutls: Several updates in the ASN.1 string handling subsystem.
 
 ** libgnutls: gnutls_x509_crt_get_policy() allows for a list of zero
