corrected copyright notices

--- a/doc/latex/cover-epub.tex
+++ b/doc/latex/cover-epub.tex
@@ -22,6 +22,7 @@
 
 \begin{flushleft}
 Copyright \copyright{} 2001-2012 Free Software Foundation, Inc.
+Copyright \copyright{} 2001-2012 Nikos Mavrogiannopoulos
 \end{flushleft}
 
 \begin{flushleft}
