--- a/doc/latex/cover.tex
+++ b/doc/latex/cover.tex
@@ -12,6 +12,7 @@ to Patrick Pelletier and Andreas Metzler.
 
 \begin{quotation}
 Copyright \copyright{} 2001-2012 Free Software Foundation, Inc.
+Copyright \copyright{} 2001-2012 Nikos Mavrogiannopoulos
 \end{quotation}
 
 \begin{flushleft}
